[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 215.0
margin_top = 120.0
margin_right = 753.0
margin_bottom = 396.0

[node name="initSDK" type="Button" parent="VBoxContainer"]
margin_right = 538.0
margin_bottom = 20.0
text = "initSDK"

[node name="showTestAd" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 538.0
margin_bottom = 44.0
text = "showTestAd"

[connection signal="pressed" from="VBoxContainer/initSDK" to="." method="_on_initSDK_pressed"]
[connection signal="pressed" from="VBoxContainer/showTestAd" to="." method="_on_showTestAd_pressed"]
